--- a/auth.html
+++ b/auth.html
@@ -368,5 +368,17 @@
   });
 </script>
 
+  <!-- Firebase compat SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+
+<!-- Єдина ініціалізація -->
+<script src="assets/js/firebase-init.js"></script>
+
+<!-- Логіка реєстрації/входу -->
+<script src="assets/js/auth.js"></script>
+
 </body>
 </html>
