--- a/cabinet.html
+++ b/cabinet.html
@@ -416,13 +416,16 @@
   </div>
 </footer>
 
-<!-- Firebase + ініціалізація (та сама, що й на інших сторінках) -->
+<!-- Firebase compat SDK -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
+<!-- Єдина ініціалізація -->
 <script src="assets/js/firebase-init.js"></script>
+
+<!-- Логіка кабінету -->
 <script src="assets/js/cabinet.js"></script>
 
 </body>
