--- a/cabinet.html
+++ b/cabinet.html
@@ -416,16 +416,16 @@
   </div>
 </footer>
 
-<!-- Firebase compat SDK -->
+<!-- SP 1: Firebase compat CDN -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
-<!-- Єдина ініціалізація -->
+<!-- SP 2: ЄДИНА ініціалізація -->
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- Логіка кабінету -->
+<!-- SP 3: Кабінет -->
 <script src="assets/js/cabinet.js"></script>
 
 </body>
