--- a/register.html
+++ b/register.html
@@ -239,11 +239,12 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
-<!-- Твій ініт (має виставляти window.scAuth і window.scDb) -->
+<!-- INIT -->
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- Реєстрація (твій файл) -->
+<!-- REGISTER -->
 <script src="assets/js/register_firebase.js"></script>
 
 </body>
