--- a/register.html
+++ b/register.html
@@ -51,9 +51,7 @@
     }
     @media (max-width:860px){.register-layout{grid-template-columns:1fr;}}
 
-    .register-form-card h2{
-      margin:0 0 6px;font-size:1.05rem;text-transform:uppercase;letter-spacing:.08em;
-    }
+    .register-form-card h2{margin:0 0 6px;font-size:1.05rem;text-transform:uppercase;letter-spacing:.08em;}
     .form__hint{font-size:.8rem;color:var(--muted);}
 
     .register-page input[type="number"]{
@@ -76,9 +74,7 @@
       background:#05060c;border:1px solid #262636;cursor:pointer;font-size:.9rem;
     }
     .event-item:hover{border-color:var(--accent);}
-    .event-item input[type="radio"]{
-      width:18px;height:18px;accent-color:#22c55e;flex-shrink:0;
-    }
+    .event-item input[type="radio"]{width:18px;height:18px;accent-color:#22c55e;flex-shrink:0;}
 
     .radio-row{display:flex;flex-wrap:wrap;gap:16px;}
     .radio-row label{display:inline-flex;align-items:center;gap:6px;cursor:pointer;font-size:.9rem;}
@@ -113,13 +109,13 @@
       margin:4px 0;font-size:.9rem;
     }
     .card-note{font-size:.8rem;color:var(--muted);margin-top:6px;}
-
     .profile-summary{font-size:.85rem;color:var(--muted);margin-bottom:10px;}
     .profile-summary b{color:#e5e7eb;}
   </style>
 </head>
 
 <body class="register-page">
+
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
@@ -156,7 +152,6 @@
 
     <div class="register-layout">
 
-      <!-- ФОРМА -->
       <div class="card register-form-card">
         <h2>Форма реєстрації на етап</h2>
         <p class="form__hint">Поля з позначкою <span style="color:var(--accent);">*</span> є обовʼязковими.</p>
@@ -164,7 +159,9 @@
         <div id="profileSummary" class="profile-summary">Профіль: завантаження...</div>
 
         <form id="regForm" class="form" novalidate>
-          <!-- Етап -->
+          <input type="text" name="hp" id="hp" autocomplete="off"
+                 style="position:absolute;left:-9999px;top:-9999px;height:0;width:0;opacity:0;"/>
+
           <div class="field">
             <label>Оберіть етап турніру <span style="color:var(--accent);">*</span></label>
             <div id="eventOptions" class="event-options">
@@ -172,7 +169,6 @@
             </div>
           </div>
 
-          <!-- Харчування -->
           <div class="field">
             <label>Харчування від організаторів? <span style="color:var(--accent);">*</span></label>
             <div class="radio-row">
@@ -181,15 +177,13 @@
             </div>
           </div>
 
-          <!-- Кількість харчуючих -->
           <div class="field field--disabled" id="foodQtyField">
             <label for="food_qty">Кількість харчуючих (1–6)</label>
             <input type="number" id="food_qty" name="food_qty" min="1" max="6" inputmode="numeric"
-              placeholder="Вкажіть кількість, якщо замовляєте харчування">
+                   placeholder="Вкажіть кількість, якщо замовляєте харчування" disabled />
             <div class="form__hint">Якщо харчування не потрібне — залиште поле порожнім.</div>
           </div>
 
-          <!-- Регламент -->
           <div class="field">
             <label style="display:flex;align-items:center;gap:8px;cursor:pointer;">
               <input type="checkbox" id="rules" required style="transform:scale(1.3);accent-color:#f6c34c;">
@@ -212,12 +206,12 @@
         </form>
       </div>
 
-      <!-- ОПЛАТА -->
       <div class="card register-card card--payment">
         <div class="card-payment-title"><span>₴</span> Оплата внеску</div>
         <p>Сума внеску: <b>3500 ₴</b> на банківську картку:</p>
         <p>Номер картки:</p>
-        <p><span class="card-number">4874 0700 5068 8793</span></p>
+        <p><span id="cardNum" class="card-number">4874 0700 5068 8793</span></p>
+        <button type="button" id="copyCard" class="btn btn--ghost" style="margin-top:6px;">Скопіювати номер картки</button>
         <p class="card-note">У коментарі до платежу обовʼязково вкажіть <b>назву команди</b>.</p>
       </div>
 
@@ -241,10 +235,10 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
-<!-- INIT -->
+<!-- init -->
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- REGISTER -->
+<!-- logic -->
 <script src="assets/js/register_firebase.js"></script>
 
 </body>
